HelloUltraviolet/Fixtures/RejectedSource/Expressions/NullLiteralExpected/Source/Main.uv
//! Rejected null literal specimen for non-raw-pointer expected type.

public procedure nullLiteralExpectedReference() -> i32 {
    let value: i32 = null
    return value
}
